# mefa

./: CITATION.cff  CMakeLists.txt  Makefile  Makefile.lessmem  Makefile.osgeo4w  Makefile.osgeo4w.lessmem  README.md  accumulate-dca_t.c  accumulate-dca_w.c  accumulate-dcf_t.c  accumulate-dcf_w.c  accumulate-dna_t.c  accumulate-dna_w.c  accumulate-dnf_t.c  accumulate-dnf_w.c  accumulate-gca_t.c  accumulate-gca_w.c  accumulate-gcf_t.c  accumulate-gcf_w.c  accumulate-gna_t.c  accumulate-gna_w.c  accumulate-gnf_t.c  accumulate-gnf_w.c  accumulate-sca_t.c  accumulate-sca_w.c  accumulate-scf_t.c  accumulate-scf_w.c  accumulate-sna_t.c  accumulate-sna_w.c  accumulate-snf_t.c  accumulate-snf_w.c  accumulate.c  accumulate_b.c  accumulate_bm.c  accumulate_bmw.c  accumulate_bw.c  accumulate_d.c  accumulate_dm.c  accumulate_dmw.c  accumulate_dw.c  (+30 more)
extra/: accumulate-dna_t.c  accumulate-gca_w.c  accumulate-gcf_t.c  accumulate-gnf_t.c  accumulate-gnf_w.c  accumulate-rnf_t.c  accumulate-sna_w.c  accumulate-snf_t.c
test/: small_fdr_45degree.tif  small_fdr_degree.tif  small_fdr_degree_int.tif  small_fdr_power2.tif  small_fdr_taudem.tif  test.sh
